--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
       <div class="col-md-10 col-md-offset-2">
         <div class="block" style="  text-align: center;">
           <h1 class="animated fadeInUp"><strong>SIGIR 2020</strong></h1>
-          <p class="animated fadeInUp">43rd International ACM SIGIR Conference on Research and Development in Information Retrieval</p>
+          <p class="animated fadeInUp">43<sup>rd</sup> International ACM SIGIR Conference on Research and Development in Information Retrieval</p>
           <p><strong>July 26-30, 2020 (Xi'an, China)</strong></p>
         </div>
       </div>
