--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@ permalink: /
 <!-- Slider Start -->
 <section id="slider">
   <div class="container">
-    <div class="row">
+      <div id="logo">
+          <img src="img/SIGIR2020.png" class="ribbon"/>
+      </div>
+    <div class="row">  
       <div class="col-md-10 col-md-offset-2">
         <div class="block" style="  text-align: center;">
           <h1 class="animated fadeInUp"><strong>SIGIR 2020</strong></h1>
